--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -41,7 +41,7 @@
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../../images/desktop/header1200.jpg);
-      min-height: 600px;
+      // min-height: 600px;
     }
   
     @media screen and (min-resolution: 2dppx) {
