--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,146 +1,145 @@
 .title{
-    @include fontSize(20px, 1.15);
-
-   margin-bottom: 12px;
-   
-   font-weight: 700;
-
-   letter-spacing: 0.03em;
-   color: $title-text-color;
-   
-}
-.form{
-    display: block;
-    width: 448px;
-    height: 342px;
-    position: absolute;
-    left: 40px;
-    margin-bottom: 20px;
-
-    &__item{
+    margin-bottom: 12px;
     
-        position: relative;
-       
-    }
-    
-    &__label{
-        display: block;
-        position: relative;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    color: $title-text-color;
+    text-align: center;
+ 
+ }
+ .form{
+     display: block;
+     width: 448px;
+     height: 342px;
+     position: absolute;
+     left: 40px;
+     margin-bottom: 20px;
+ 
+     &__item{
+         position: relative;
         
-        margin-bottom: 4px;
-      
-        @include fontSize(12px, 1.17);
-        letter-spacing: 0.01em;
-        color: #757575;
-    }
-    
-    &__input{
-        // width: 100%;
-        height: 40px;
-        padding: 11px 12px;
-        padding-left: 42px;
-        margin-bottom: 10px;
-    
-        font: inherit;
-        cursor: pointer;
-    
-        border-radius: 4px;
-        border: 1px solid rgba(33, 33, 33, 0.2);
-       
-    }
+     }
      
-    &__svg{
-        position: absolute;
-        top: 40%;
-        left: 12px;
-        transform: translateY(-50%);
-        display: inline-block;
-    }
+     &__label{
+         display: block;
+         position: relative;
+         
+         margin-bottom: 4px;
+       
+         font-size: 12px;
+         line-height: 1.17;
+         letter-spacing: 0.01em;
+         color: #757575;
+     }
+     
+     &__input{
+        //  width: 100%;
+         height: 40px;
+        //  padding: 11px 12px;
+         padding-left: 42px;
+        //  margin-bottom: 10px;
+     
+        //  font: inherit;
+        //  cursor: pointer;
+     
+         border-radius: 4px;
+         border: 1px solid rgba(33, 33, 33, 0.2);
+        
+     }
+      
+     &__svg{
+         position: absolute;
+         top: 40%;
+         left: 12px;
+         transform: translateY(-50%);
+         display: inline-block;
+     }
+     
+     &__input:focus{
+         outline: none;
+         border: 1px solid $accent-color;
+     }
+     
+     &__item:focus-within > &__svg{
+         fill: $accent-color;
+     }
+     
+     &__textarea{
+         padding: 12px 16px;
+         margin-bottom: 10px;
+         height: 120px;
+         resize: none;
+     
+         font-size: 14px;
+         line-height: 1.14;
+         letter-spacing: 0.01em;
+     
+         /* color: rgba(117, 117, 117, 0.5); */
+     }
+     
+ }
+ 
+ 
+ .checkbox{
+     display: flex;
+ 
+     font-size: 14px;
+     line-height: 1.71;
+     align-items: center;
+     margin-left: 36.38px;
+     margin-bottom: 30px;
+     
+     &__input{
+         position: absolute; 
+         width: 1px; 
+         height: 1px; 
+         margin: -1px; 
+         border: 0; 
+         padding: 0; 
+         white-space: nowrap; 
+         clip-path: inset(100%); 
+         clip: rect(0 0 0 0); 
+         overflow: hidden; 
+     }
+ 
+     &__svg{
+         display: inline-block;
+         position: absolute;
+         align-items: center;
+         left: 12px;
+     
+         border: 2px solid $title-text-color;
+         border-radius: 2px;
+     }
+     
+     &__input:checked + &__svg{
+         background-color: $accent-color;
+         background-image: url("../images/icons.svg#icon-check");
+         border-color: $accent-color;
+         background-size: contain;
+         background-origin: border-box;
+     
+         transition: background-color 250ms $cubic;
+     }
+     
+     &__label{
+         color: $accent-color;
+     }
+     
+ }
+ 
+ .button{
+     text-align: center; 
+ 
+     &__form{
+         @extend %button;
+         padding: 10px 55px;
+     }
+ 
+     &__form:hover,
+     &__form:focus{
+        background-color: $blue-color;
+     }   
+ }
     
-    &__input:focus{
-        outline: none;
-        border: 1px solid $accent-color;
-    }
-    
-    &__item:focus-within > &__svg{
-        fill: $accent-color;
-    }
-    
-    &__textarea{
-        padding: 12px 16px;
-        margin-bottom: 10px;
-        height: 120px;
-        resize: none;
-    
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.01em;
-    
-        /* color: rgba(117, 117, 117, 0.5); */
-    }
-    
-}
-
-
-.checkbox{
-    display: flex;
-
-    font-size: 14px;
-    line-height: 1.71;
-    align-items: center;
-    margin-left: 36.38px;
-    margin-bottom: 30px;
-    
-    &__input{
-        position: absolute; 
-        width: 1px; 
-        height: 1px; 
-        margin: -1px; 
-        border: 0; 
-        padding: 0; 
-        white-space: nowrap; 
-        clip-path: inset(100%); 
-        clip: rect(0 0 0 0); 
-        overflow: hidden; 
-    }
-
-    &__svg{
-        display: inline-block;
-        position: absolute;
-        align-items: center;
-        left: 12px;
-    
-        border: 2px solid $title-text-color;
-        border-radius: 2px;
-    }
-    
-    &__input:checked + &__svg{
-        background-color: $accent-color;
-        background-image: url("../images/icons.svg#icon-check");
-        border-color: $accent-color;
-        background-size: contain;
-        background-origin: border-box;
-    
-        transition: background-color 250ms $cubic;
-    }
-    
-    &__label{
-        color: $accent-color;
-    }
-    
-}
-
-.button{
-    text-align: center; 
-
-    &__form{
-        @extend %button;
-        padding: 10px 55px;
-    }
-
-    &__form:hover,
-    &__form:focus{
-       background-color: $blue-color;
-    }   
-}
-   
