--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
     background-image: linear-gradient( to right, 
     rgba(47, 48, 58, 0.4), 
     rgba(47, 48, 58, 0.4)),
-      url(../../images/mobile/header480.jpg);
+      url(../images/mobile/header480.jpg);
     background-repeat: no-repeat;
     background-size: cover; 
 }
@@ -20,19 +20,19 @@
       background-image: linear-gradient(to right,
        rgba(47, 48, 58, 0.4), 
        rgba(47, 48, 58, 0.4)),
-      url(../../images/mobile/header480@2x.jpg);
+      url(../images/mobile/header480@2x.jpg);
     }
 }
   @media screen and (min-width:768px) {
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/tablet/header768.jpg);
+      url(../images/tablet/header768.jpg);
     }
   
     @media screen and (min-resolution: 2dppx) {
       .hero {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/tablet/header768@2x.jpg);
+        url(../images/tablet/header768@2x.jpg);
       }
     }
 }
@@ -40,13 +40,13 @@
   @media screen and (min-width:1200px) {
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/desktop/header1200.jpg);
+      url(../images/desktop/header1200.jpg);
     }
   
     @media screen and (min-resolution: 2dppx) {
       .hero {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/desktop/header1200@2x.jpg);
+        url(../images/desktop/header1200@2x.jpg);
       }
     }
   }
