--- a/css/main.css
+++ b/css/main.css
@@ -1531,8 +1531,8 @@ li {
 /* Подпишитесь на рассылку end */
 .backdrop {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
   z-index: 4;
+  background-color: rgba(0, 0, 0, 0.2);
   top: 0;
   left: 0;
   width: 100%;
@@ -1556,8 +1556,8 @@ li {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  height: 609px;
   width: 450px;
+  height: 609px;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1625,16 +1625,14 @@ li {
   text-align: center;
 }
 
-.form {
-  display: block;
-  width: 448px;
-  height: 342px;
-  position: absolute;
-  left: 40px;
-  margin-bottom: 20px;
-}
-
 .form__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
 }
 
@@ -1649,8 +1647,13 @@ li {
 }
 
 .form__input {
+  width: 100%;
   height: 40px;
+  padding: 11px 12px;
   padding-left: 42px;
+  margin-bottom: 10px;
+  font: inherit;
+  cursor: pointer;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
@@ -1717,7 +1720,7 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  left: 12px;
+  left: 40px;
   border: 2px solid #212121;
   border-radius: 2px;
 }
